Freedom Sanbox Ant Deploy/src/objects/Campaign_Expenses__c.object
<CustomObject>
    <fields>
        <fullName>Actioned_On__c</fullName>
        <label>Actioned On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Amount_Received__c</fullName>
        <label>Amount Received</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bill_Amount__c</fullName>
        <label>Bill Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bill__c</fullName>
        <label>Bill No.</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Campaign_Names__c</fullName>
        <label>Campaign Name</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaign Expenses</relationshipLabel>
        <relationshipName>Campaign_Expenses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Conveyance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conveyance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estimated_Cost__c</fullName>
        <label>Estimated Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Marketing_Owner__c</fullName>
        <label>Marketing Owner</label>
        <picklist>
            <picklistValues>
                <fullName>Ashwin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hemal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suphia</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reimbursements__c</fullName>
        <label>Reimbursements</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vendor_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Name</label>
        <referenceTo>Vendor_del__c</referenceTo>
        <relationshipLabel>Campaign Expenses</relationshipLabel>
        <relationshipName>Campaign_Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Campaign Expenses</label>
    <nameField>
        <label>Expense Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaign Expenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>